syntax = "proto3";

package contract;

import "google/protobuf/any.proto";

message Instance {
    bytes key = 1;
    google.protobuf.Any value = 2;
    string contractID = 3;
    bool deleted = 4;
    bytes accessControl = 5;
}

message SpawnTaskProto {
    string contractID = 1;
    google.protobuf.Any argument = 2;
}

message InvokeTaskProto {
    bytes key = 1;
    google.protobuf.Any argument = 2;
}

message DeleteTaskProto {
    bytes key = 1;
}
